Increade the limit on the .libfile operand length from 200 to the full gp_file_name_sizeof . The OS also limits the length of the file name, for instance, on WinNT, NTFS to 252 characters. Fix bug 688198.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6007 a1074d23-0009-0410-80fe-cf8c14f379e6